folder name update

--- a/javascript-fundamentals/2.html
+++ b/javascript-fundamentals/2.html
@@ -2,15 +2,14 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>Get Started (Part - 01)</title>
+    <title>JavaScript Variables - 02</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="main_area">
 
     <div class="header">
-        <h1>Get Started (Part - 01)</h1>
-        <h3>JavaScript Fundamentals Bangla Tutorial – Part:01</h3>
+        <h1>JavaScript Variables - 02</h1>
     </div>
     
     <!-- Main content start -->
