update text here

--- a/javascript-fundamentals/1.html
+++ b/javascript-fundamentals/1.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>Get Started JavaScript</title>
+    <title>Get Started JavaScript Fundamentals</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="main_area">
 
     <div class="header">
-        <h1>Get Started JavaScript</h1>
+        <h1>Get Started JavaScript Fundamentals</h1>
     </div>
     
     <!-- Main content start -->
