--- a/javascript-fundamentals/2.html
+++ b/javascript-fundamentals/2.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Variables - 02</title>
+    <title>JavaScript Fundamentals (Variables) – 02</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="main_area">
 
     <div class="header">
-        <h1>JavaScript Variables - 02</h1>
+        <h1>JavaScript Fundamentals (Variables) – 02</h1>
     </div>
     
     <!-- Main content start -->
